<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">emlbsM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="form_password">Password</string>
    <string name="title_activity_service_list">ServiceListActivity</string>
    <string name="form_button_submit">Log In</string>
    <string name="title_activity_acc">AccActivity</string>
    <string name="hint_uname">Type Username</string>
    <string name="hint_pass">Type Password</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="form_checkbox_staylog">Save Details</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_about">About</string>
    <string name="label_dev">"Developers: "</string>
    <string name="dev_names">Dinesh Sawant\nShankar Tawar</string>
    <string name="label_devteam">Development Team</string>
    <string name="title_activity_help">Help</string>
    <string name="aHandle">Handle</string>
    <string name="time_pass_text">If you want help. help yourself.If you want help. help yourself.If you want help. help yourself.If you want help. help yourself.If you want help. help yourself.If you want help. help yourself.If you want help. help yourself.</string>
    <string name="title_activity_issue_complaint">IssueComplaintActivity</string>
    <string name="title_activity_camera_preview">CameraPreviewActivity</string>
    <string name="title_activity_issue">IssueActivity</string>
    <string name="title_activity_image_send">Fill Details</string>
    <string name="buttontakephoto">Click</string>
    <string name="complaintimagedesc">Complaint Image</string>
    <string name="buttonsendcomplaint">Send Complaint</string>
    <string name="hintdesc">Descrption of Situation</string>
    <string name="title_activity_test_ws">TestWSActivity</string>
    <string name="button_menu">Go Back to Menu</string>
    <string name="title_activity_parse_json">ParseJSON</string>
    <string name="title_activity_alpha_settings">Alpha Settings</string>
    <string name="hintservernameorip">Server Name or IP address</string>
    <string name="hintserverportno">Server Port</string>
    <string name="buttonalphasetting">Alpha Settings</string>
    <string name="title_activity_news_menu">LOCO News </string>
    <string name="title_activity_news">News</string>
    <string name="newsTitle">News Title</string>
    <string name="news">News</string>
    <string name="label_login">Log In</string>
    <string name="legendbutton">L</string>
    <string name="title_activity_legend">LegendActivity</string>
    <string name="title_citymap">CityMap</string>
    <string name="citymap_description">A map that gives you up to date information by authority</string>
    <string name="title_complaint">Issue Complaint</string>
    <string name="comlaint_desc">Take Photo - > Fill Details -> Send</string>
    <string name="title_loconews">LOCO news</string>
    <string name="loconews_desc">LOCO news gives you notices and important news depending on your location. Please set your GPS on.</string>

</resources>