<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity" >

   <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="21dp"
        android:text="@string/title_citymap"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView1"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="24dp"
       android:text="@string/citymap_description"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="26dp"
       android:text="@string/title_complaint"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="20dp"
       android:text="@string/comlaint_desc"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView4"
       android:layout_below="@+id/textView4"
       android:layout_marginTop="28dp"
       android:text="@string/title_loconews"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView5"
       android:layout_below="@+id/textView5"
       android:layout_marginTop="19dp"
       android:text="@string/loconews_desc"
       android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>